syntax = "proto3";

option go_package = "github.com/Tantatorn-dev/go-chatty/proto";
package chat;


service ChatProto {
  rpc JoinRoom (JoinRoomRequest) returns (JoinRoomResponse) {}
	rpc SendMessage (SendMessageRequest) returns (SendMessageResponse) {}
	rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse) {}
}

message Msg {
  string username = 1;
  string message = 2;
}

message SendMessageRequest {
  string code = 1;
  Msg msg = 2;
}

message SendMessageResponse {
  bool success = 1;
}

message GetMessagesRequest {
  string code = 1;
}

message GetMessagesResponse {
  repeated Msg messages = 1;
}

message JoinRoomRequest {
  string username = 1;
  string code = 2;
}

message JoinRoomResponse {
  repeated Msg messages = 1;
}
